Fixed pop-up overlay not covering screen
Issues happened when scrolling after the pop-up had appeared. Fixed by
stopping the overlay scrolling with the page

--- a/assets/core.css
+++ b/assets/core.css
@@ -79,7 +79,7 @@ header, .pop {
 
 .darken-overlay {
 	background: rgba(0, 0, 0, 0.6);
-	position: absolute;
+	position: fixed;
 	top: 0px;
 	left: 0px;
 	width: 100%;
